--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <title></title>
   </head>
   <body>
-
+    <div class="side">
+      the sidebar
+    </div>
+    <div class="nav">
+      <div class="dropdown navButton">Drop-it-down</div>
+      <div class="about navButton">About</div>
+      <div class="login navButton">Login</div>
+    </div>
+    <div class="content">
+      Content
+    </div>
   </body>
 </html>
